Change version for tests - NEW-DEV-COMMIT