@@ -1,51 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.fenixedu.ulisboa</groupId>
-		<artifactId>web-app-project</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath></relativePath>
-	</parent>
+    <parent>
+        <groupId>org.fenixedu.ulisboa</groupId>
+        <artifactId>web-app-project</artifactId>
+        <version>1.0.0-NEW-DEV</version>
+        <relativePath></relativePath>
+    </parent>
 
-	<artifactId>ulisboa-web-app</artifactId>
-	<packaging>war</packaging>
+    <artifactId>test-web-app</artifactId>
+    <packaging>war</packaging>
 
-	<name>ulisboa-web-app</name>
+    <name>test-web-app</name>
 
-	<repositories>
-		<repository>
-			<id>ulisboa-repo</id>
-			<url>http://nexus.ulisboa.pt:8081/nexus/content/groups/public/</url>
-		</repository>
-	</repositories>
+    <repositories>
+        <repository>
+            <id>ulisboa-repo</id>
+            <url>http://nexus.ulisboa.pt:8081/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
-				<configuration>
-					<contextFile>tomcat-context.xml</contextFile>
-					<systemProperties>
-						<!-- Uncomment the next property if you want webservices to dump their 
-							SOAP packages into tomcat's log -->
-						<!-- <com.sun.xml.ws.transport.http.client.HttpTransportPipe.dump>true</com.sun.xml.ws.transport.http.client.HttpTransportPipe.dump> -->
-					</systemProperties>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <contextFile>tomcat-context.xml</contextFile>
+                    <systemProperties>
+                        <JAVA_OPTS>-server -da -dsa -Xms2048m -Xmx2048m
+                            -XX:PermSize=256m
+                            -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:ParallelGCThreads=2
+                            -Dcom.sun.management.jmxremote
+                            -Dorg.apache.jasper.compiler.Parser.STRICT_QUOTE_ESCAPING=false
+                            -Dfile.encoding=UTF-8
+                            -Xrunjdwp:transport=dt_socket,server=y,address=8000,suspend=y</JAVA_OPTS>
+                        <!-- Uncomment the next property if you want webservices to dump their SOAP packages into tomcat's log -->
+                        <!-- <com.sun.xml.ws.transport.http.client.HttpTransportPipe.dump>true</com.sun.xml.ws.transport.http.client.HttpTransportPipe.dump> -->
+                    </systemProperties>
+                    <port>8080</port>
+                    <!-- <url>http://85.244.127.165:8080/fenix</url> -->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-	<dependencies>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.0.1</version>
-			<scope>provided</scope>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.qubit.solution.fenixedu</groupId>
+            <artifactId>migration-classes</artifactId>
+            <version>1.0.0-NEW-DEV</version>
+        </dependency>
+    </dependencies>
+
 </project>
